Fixes BUG